# api-pilot

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .lintstagedrc  .prettierrc  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: backend-ci.yml  docker-build.yml  frontend-ci.yml
.husky/: pre-commit
backend/: alembic.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d2c3ada716e_merge_scene_and_api_starred_branches.py  20260530_220606_add_test_dataset_tables.py  20260530_220821_enhance_report_and_env.py  20260530_221100_enhance_mock_rules.py  20260530_221252_add_notifications.py  20260605_005000_add_is_seed_and_notes.py  20260609_000000_add_api_test_history.py  20260609_120000_add_audit_logs.py  20260609_130000_add_member_permissions.py  20260610_120000_extend_refresh_tokens_for_password_reset.py  20260614_120000_add_production_features.py  20260614_130000_add_is_starred_and_sort_order.py  20260614_180000_add_description_md_and_api_tags.py  (+22 more)
backend/app/: config.py  database.py  limiter.py  main.py  migration.py
backend/scripts/: cleanup_admin_private.py  cleanup_db.py
frontend/: README.md  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/e2e/: debug-full-page.spec.ts  debug-login.spec.ts  debug-login2.spec.ts  debug-login3.spec.ts  debug-page-structure.spec.ts  debug-register.spec.ts  debug-register2.spec.ts  debug-retry.spec.ts  full-feature-test.spec.ts  user-01-new-user.spec.ts  user-02-developer.spec.ts  user-03-tester.spec.ts  user-04-qa-manager.spec.ts  user-05-project-admin.spec.ts  user-06-doc-maintainer.spec.ts  user-07-mock-user.spec.ts  user-08-power-user.spec.ts  user-09-readonly-guest.spec.ts  user-10-concurrent.spec.ts
frontend/nginx/: default.conf
frontend/src/: App.vue  env.d.ts  main.ts
scripts/: backup_db.ps1  backup_db.sh  generate_lock.sh
(+466 files in other folders)
